--- a/src/templates/main.hbs
+++ b/src/templates/main.hbs
@@ -4,6 +4,10 @@
 <div class="feed" id="feed"></div>
 {{else}}
 <div class="welcome-screen">
-  <h1 class="welcome-screen__logotype logotype"><div class="sr-only">Instaprjct</div></h1>
+	<button id="login">Login</button>
+	<button id="create">Create user</button>
+	<button id="logout">Logout</button>
+
+	<h1 class="welcome-screen__logotype logotype"><div class="sr-only">Instaprjct</div></h1>
 </div>
 {{/if}}
