--- a/src/templates/signup.hbs
+++ b/src/templates/signup.hbs
@@ -9,13 +9,15 @@
         <ul id="errors" class="list-group" hidden></ul>
 
         <div class="form-group">
-          <label>Email</label>
+          <label class="control-label">Email</label>
           <input type="text" class="form-control" name="email">
+            <span class="help-block"></span>
         </div>
 
         <div class="form-group">
-          <label>Username</label>
+          <label class="control-label">Username</label>
           <input type="text" class="form-control" name="username">
+	        <span class="help-block"></span>
         </div>
 
         <div class="form-group">
@@ -24,13 +26,15 @@
         </div>
 
         <div class="form-group">
-          <label>Password</label>
+          <label class="control-label">Password</label>
           <input type="password" class="form-control" name="password">
+	        <span class="help-block"></span>
         </div>
 
         <div class="form-group">
-          <label>Confirm password</label>
+          <label class="control-label">Confirm password</label>
           <input type="password" class="form-control" name="passwordConfirm">
+	        <span class="help-block"></span>
         </div>
 
         {{> form-submit btn-text="Sign Up"}}
