--- a/src/templates/login.hbs
+++ b/src/templates/login.hbs
@@ -1,26 +1,28 @@
 {{> header}}
 <div class="container-fluid">
 
-  <form id="login-form">
+	<form id="login-form">
 
-    <div class="row">
-      <div class="col-sm-6 col-sm-offset-3">
+		<div class="row">
+			<div class="col-sm-6 col-sm-offset-3">
 
-        <div class="form-group">
-          <label>Email</label>
-          <input type="text" class="form-control" name="email">
-        </div>
+				<div class="form-group">
+					<label class="control-label">Email</label>
+					<input type="text" class="form-control" name="email">
+					<span class="help-block"></span>
+				</div>
 
-        <div class="form-group">
-          <label>Password</label>
-          <input type="password" class="form-control" name="password">
-        </div>
+				<div class="form-group">
+					<label class="control-label">Password</label>
+					<input type="password" class="form-control" name="password">
+					<span class="help-block"></span>
+				</div>
 
-        <button type="submit" class="btn btn-primary">Log In</button>
+				<button type="submit" class="btn btn-primary">Log In</button>
 
-      </div>
-    </div>
+			</div>
+		</div>
 
-  </form>
+	</form>
 
 </div>
