--- a/src/css/components/_post.styl
+++ b/src/css/components/_post.styl
@@ -85,7 +85,8 @@
       font inherit
       outline none
 
-  &__like
+  &__like,
+  &__dislike
     background none
     border none
     line-height 1
