--- a/src/templates/partials/_post.hbs
+++ b/src/templates/partials/_post.hbs
@@ -14,6 +14,7 @@
 </header>
 
 <div class="post__content">
+	{{!--> preloaderNew--}}
 	<img src="{{ url }}" alt="{{ name }}">
 </div>
 
@@ -37,27 +38,27 @@
 	<div class="f f-align-1-2">
 		<div class="post__action-wrapper">
 			<div class="action-button-group">
-				<button type="button">
+				<button class="action-button-group__item action-button-group__item--smiley-face" type="button">
 					<svg class="custom-icon custom-icon-smiley-face">
 						<use xlink:href="#custom-icon-smiley-face"></use>
 					</svg>
 				</button>
-				<button type="button">
+				<button class="action-button-group__item action-button-group__item--sad-face" type="button">
 					<svg class="custom-icon custom-icon-sad-face">
 						<use xlink:href="#custom-icon-sad-face"></use>
 					</svg>
 				</button>
-				<button type="button">
+				<button class="action-button-group__item action-button-group__item--angry-face" type="button">
 					<svg class="custom-icon custom-icon-angry-face">
 						<use xlink:href="#custom-icon-angry-face"></use>
 					</svg>
 				</button>
-				<button type="button">
+				<button class="action-button-group__item action-button-group__item--surprised-face" type="button">
 					<svg class="custom-icon custom-icon-surprised-face">
 						<use xlink:href="#custom-icon-surprised-face"></use>
 					</svg>
 				</button>
-				<button type="button">
+				<button class="action-button-group__item action-button-group__item--thumbs-up" type="button">
 					<svg class="custom-icon custom-icon-thumbs-up">
 						<use xlink:href="#custom-icon-thumbs-up"></use>
 					</svg>
