--- a/src/templates/partials/_post.hbs
+++ b/src/templates/partials/_post.hbs
@@ -40,30 +40,35 @@
 	<div class="f f-align-1-2">
 		<div class="post__action-wrapper">
 			<div class="action-button-group">
+				<button class="action-button-group__item action-button-group__item--thumbs-up" type="button">
+					<svg class="custom-icon custom-icon-thumbs-up">
+						<use xlink:href="#custom-icon-thumbs-up"></use>
+					</svg>
+					<span class="action-button-group__tooltip">Нравиться</span>
+				</button>
 				<button class="action-button-group__item action-button-group__item--smiley-face" type="button">
 					<svg class="custom-icon custom-icon-smiley-face">
 						<use xlink:href="#custom-icon-smiley-face"></use>
 					</svg>
-				</button>
-				<button class="action-button-group__item action-button-group__item--sad-face" type="button">
-					<svg class="custom-icon custom-icon-sad-face">
-						<use xlink:href="#custom-icon-sad-face"></use>
-					</svg>
-				</button>
-				<button class="action-button-group__item action-button-group__item--angry-face" type="button">
-					<svg class="custom-icon custom-icon-angry-face">
-						<use xlink:href="#custom-icon-angry-face"></use>
-					</svg>
+					<span class="action-button-group__tooltip">Ха-ха</span>
 				</button>
 				<button class="action-button-group__item action-button-group__item--surprised-face" type="button">
 					<svg class="custom-icon custom-icon-surprised-face">
 						<use xlink:href="#custom-icon-surprised-face"></use>
 					</svg>
+					<span class="action-button-group__tooltip">Ух ты!</span>
 				</button>
-				<button class="action-button-group__item action-button-group__item--thumbs-up" type="button">
-					<svg class="custom-icon custom-icon-thumbs-up">
-						<use xlink:href="#custom-icon-thumbs-up"></use>
+				<button class="action-button-group__item action-button-group__item--sad-face" type="button">
+					<svg class="custom-icon custom-icon-sad-face">
+						<use xlink:href="#custom-icon-sad-face"></use>
 					</svg>
+					<span class="action-button-group__tooltip">Сочувствую</span>
+				</button>
+				<button class="action-button-group__item action-button-group__item--angry-face" type="button">
+					<svg class="custom-icon custom-icon-angry-face">
+						<use xlink:href="#custom-icon-angry-face"></use>
+					</svg>
+					<span class="action-button-group__tooltip">Возмутительно</span>
 				</button>
 			</div>
 			<button type="button" class="post__like">
