--- a/src/css/_custom-style.styl
+++ b/src/css/_custom-style.styl
@@ -136,6 +136,19 @@ svg[class*="custom-icon-"] {
 	fill: red;
 }
 
+.emotion-list {
+	display: inline-flex;
+	height: 32px;
+	align-items: center;
+
+	.custom-icon {
+		width: 18px;
+		height: 18px;
+		margin-right: -5px;
+		position: relative;
+	}
+}
+
 .action-button-group {
 	display: flex;
 	position: absolute;
@@ -146,7 +159,7 @@ svg[class*="custom-icon-"] {
 	padding: 6px;
 	background: #ffffff;
 	border-radius: 40px;
-	border: 1px solid rgba(#000000, 20%);
+	border: 1px solid rgba(#677bde, 10%);
 	transform: translateY(10px);
 	pointer-events: none;
 	transition: opacity .225s ease,
