--- a/src/templates/partials/_post.hbs
+++ b/src/templates/partials/_post.hbs
@@ -38,6 +38,15 @@
 		</ul>
 	{{/if}}
 	<div class="f f-align-1-2">
+		{{#if emotions}}
+		<div class="emotion-list">
+			{{#each emotions}}
+				<svg style="z-index: {{inc @index}}" class="custom-icon custom-icon-{{emotionType}}">
+					<use xlink:href="#custom-icon-{{emotionType}}"></use>
+				</svg>
+			{{/each}}
+		</div>
+		{{/if}}
 		<div class="post__action-wrapper">
 			<div class="action-button-group">
 				<button class="action-button-group__item action-button-group__item--thumbs-up" type="button">
