--- a/src/css/_custom-style.styl
+++ b/src/css/_custom-style.styl
@@ -140,6 +140,7 @@ svg[class*="custom-icon-"] {
 	display: inline-flex;
 	height: 32px;
 	align-items: center;
+	//direction: rtl;
 
 	.custom-icon {
 		width: 18px;
